actors swagger document updated
